--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=someDbName
-DB_USERNAME=someDbUser
-DB_PASSWORD=somePassword
+DB_DATABASE=vagrant
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
